--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "core-js": "^3.6.5",
     "emailjs-com": "^3.2.0",
     "vue": "^2.6.11",
+    "vue-agile": "^2.0.0",
+    "vue-carousel-3d": "^1.0.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@iconify/vue2": "^1.1.4",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
